next step towards XML examples